# yast-sudo

./: .cvsignore  .gitignore  .travis.yml  MAINTAINER  README.md  RPMNAME  yast2-sudo.spec.in
agents/: Makefile.am  ag_etc_sudoers  sudo.scr
doc/: Makefile.am
doc/autodocs/: Makefile.am
package/: yast2-sudo.changes  yast2-sudo.spec
src/: Makefile.am  Sudo.ycp  complex.ycp  dialog-cmnd.ycp  dialog-host.ycp  dialog-runas.ycp  dialog-spec.ycp  dialog-user.ycp  dialogs.ycp  helps.ycp  sudo.desktop  wizards.ycp
src/clients/: sudo.rb  sudo.ycp
src/desktop/: org.opensuse.yast.Sudo.desktop  sudo.desktop
src/include/sudo/: complex.rb  complex.ycp  dialog-cmnd.rb  dialog-host.rb  dialog-host.ycp  dialog-runas.rb  dialog-runas.ycp  dialog-spec.rb  dialog-spec.ycp  dialog-user.rb  dialogs.rb  helps.rb  wizards.rb
src/lib/cfa/: sudoers.rb
src/modules/: Sudo.rb  Sudo.ycp
src/servers_non_y2/: ag_etc_sudoers
test/: sudo_test.rb  test_helper.rb
test/cfa/: sudoers_test.rb
test/data/: sudoers_example  sudoers_no_specs_example  sudoers_old_example
test/data/associated_tag_example/: sudoers
test/data/cmd_alias_config/: sudoers
test/data/default_config/: sudoers
test/data/digest_example/: sudoers
test/data/multitag_single_line/: sudoers
test/data/nested_include_config/: sudoers  sudoers2  sudoers3
test/data/old_includedir/: sudoers
test/data/richful_example/: sudoers
testsuite/tests/: Sudo.out  Sudo.rb  Sudo.ycp
